belldog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: belldog
  namespace: belldog
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: belldog.cloudless.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: belldog
            port:
              number: 8080
